fixed spacing issue with navbar

--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,7 @@ h1 {
 }
 
 #lead{
-    margin-top: 70px;
+    margin-top: 60px;
     background: url("/img/santosh.png") no-repeat top center fixed;
     background-size: cover;
     font-size: 50px;
